[gd_scene load_steps=4 format=2]

[ext_resource path="res://elements/PlaylistAdd.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture2D" id=2]
[ext_resource path="res://Fonts/titleFont.tres" type="FontFile" id=5]

[node name="PlaylistAdd" type="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -175.0
offset_right = 175.0
offset_bottom = 175.0
custom_minimum_size = Vector2( 350, 350 )
pivot_offset = Vector2( 316.078, 86.5961 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
self_modulate = Color( 0.0352941, 0.0352941, 0.0352941, 0.521569 )
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.83179
offset_top = 6.99811
offset_right = 5.83179
offset_bottom = 6.99811
mouse_filter = 2
__meta__ = {
"_edit_lock_": true
}

[node name="Control" type="Control" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.5
offset_top = -35.0
offset_right = 2.5
offset_bottom = -3.0
custom_minimum_size = Vector2( 0, 32 )
__meta__ = {
"_edit_group_": true
}

[node name="Cancel" type="Button" parent="Control"]
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 5.1192
offset_top = -9.93118
offset_right = 59.1192
offset_bottom = 11.0688
text = "Cancel"

[node name="Add" type="Button" parent="Control"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -72.0
offset_top = -10.0
offset_right = -6.0
offset_bottom = 11.0
pivot_offset = Vector2( 32.8605, -0.16687 )
text = "Add"

[node name="OptionButton" type="OptionButton" parent="Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -111.395
offset_top = -31.7899
offset_right = 105.935
offset_bottom = -4.78989
custom_minimum_size = Vector2( 217.33, 0 )
text = "Play List"
align = 1

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
offset_left = -127.5
offset_top = -85.0
offset_right = 128.5
offset_bottom = 171.0
custom_minimum_size = Vector2( 256, 256 )
texture = ExtResource( 2 )
expand = true

[node name="title" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_top = 10.0
offset_right = 144.0
offset_bottom = 58.0
theme_override_fonts/font = ExtResource( 5 )
text = "Song Title"
align = 1
valign = 1
autowrap = true
max_lines_visible = 2

[node name="artist" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -142.5
offset_top = 60.0
offset_right = 145.5
offset_bottom = 80.0
text = "Song Title"
align = 1
valign = 1
clip_text = true
max_lines_visible = 1

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -65.0
offset_right = 80.0
offset_bottom = -46.0
text = "Add to play list"
align = 1
valign = 1
[connection signal="add_track" from="." to="." method="_on_PlaylistAdd_add_track"]
[connection signal="visibility_changed" from="." to="." method="_on_PlaylistAdd_visibility_changed"]
[connection signal="pressed" from="Control/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="pressed" from="Control/Add" to="." method="_on_Button_pressed"]
[connection signal="item_selected" from="Control/OptionButton" to="." method="_on_OptionButton_item_selected"]
